# background-removal-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-hook.sh  BUILD_OPTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.workspace-backup  Dockerfile  ICC_PROFILE_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  QUALITY_IMPROVEMENTS.md  README.md  TODOS.md  benchmark.rs  build-cross.sh  build.rs  capa  check_coreml.rs  history  lint.sh  llms.txt  rustfmt.toml  scripts  test_5sec.mov  test_final.mov  test_progress.sh  test_video_direct.rs  test_video_progress.sh  warnings-report.txt  webp_test.rs
.claude/: settings.json  settings.local.json
.claude/commands/: code_review.md  generate_dadjoke.md  implement_plan.md  review_developer_docs.md  review_guides.md
.claude/experts/: sonnet-v4.md
.claude/rules/: cache_disabled_testing.md  cargo_check_after_changes.md  cargo_fmt_after_changes.md  cargo_test_after_completion.md  changelog_update.md  code_quality.md  commit_guidelines.md  conversational_interaction.md  documentation_protocols.md  feature_finalization_testing.md  git_workflow.md  implementation_planning.md  kiss_principle.md  maintain_llms_txt.md  mandatory_doc_test_execution.md  mandatory_worktree_usage.md  parallel_tool_calling.md  process_execution.md  prompt_for_tool_triggering-websearch.md  repository_structure_reference.md  solid_principles.md  task_management.md  thinking_and_tool_use.md  tool_use_browser_mcp.md  tool_use_playwright_mcp.md  yagni_principle.md
.github/workflows/: changelog-check.yml  ci.yml  release.yml  zero-warnings.yml
benches/: README.md  cache_benchmarks.rs  cache_verification.rs  provider_benchmarks.rs
crates/bg-remove-cli/: CHANGELOG.md  Cargo.toml
crates/bg-remove-cli/src/: backend_factory.rs  config.rs  main.rs
crates/bg-remove-core/: CHANGELOG.md  Cargo.toml  build.rs
crates/bg-remove-core/benches/: background_removal.rs  simple_bench.rs
crates/bg-remove-core/examples/: comprehensive_icc_validation.rs  comprehensive_test_suite.rs  cpu_vs_gpu_test.rs  examine_phase4_results.rs  execution_provider_choice.rs  execution_provider_test.rs  final_icc_validation.rs  fix_alpha_channel.rs  fp32_vs_fp16_benchmark.rs  performance_benchmark.rs  precision_benchmark.rs  quantitative_comparison.rs  test_custom_png_icc.rs  test_embedding.rs  test_preprocessing_fix.rs  test_real_image.rs  test_webp_icc.rs  timing_analysis_benchmark.rs  transparency_diagnostic.rs  validate_against_js.rs
crates/bg-remove-core/models/: placeholder.onnx
crates/bg-remove-core/src/: color_profile.rs  color_profile_tests.rs  config.rs  error.rs  image_processing.rs  inference.rs  jpeg_encoder.rs  lib.rs  models.rs  png_encoder.rs  processor.rs  timing_tests.rs  types.rs  webp_encoder.rs
crates/bg-remove-core/src/backends/: mock.rs  mod.rs  onnx.rs
crates/bg-remove-core/src/encoders/: jpeg_encoder.rs  mod.rs  png_encoder.rs  webp_encoder.rs
crates/bg-remove-core/src/services/: format.rs  io.rs  mod.rs  progress.rs
crates/bg-remove-core/src/utils/: color.rs  mod.rs  models.rs  preprocessing.rs  providers.rs  validation.rs
crates/bg-remove-core/src/utils/validation/: mod.rs  model.rs  numeric.rs  path.rs  tensor.rs
crates/bg-remove-core/tests/: unified_processor_tests.rs
crates/bg-remove-e2e/: CHANGELOG.md  Cargo.toml  README.md
crates/bg-remove-e2e/benches/: background_removal.rs  batch_comparison.rs
crates/bg-remove-e2e/src/: comparison.rs  lib.rs
crates/bg-remove-e2e/tests/: accuracy_tests.rs  compatibility_tests.rs  format_tests.rs  performance_tests.rs
crates/bg-remove-onnx/: CHANGELOG.md  Cargo.toml
crates/bg-remove-onnx/src/: lib.rs
crates/bg-remove-testing/: Cargo.toml
crates/bg-remove-testing/assets/: README.md  test_cases.json
crates/bg-remove-testing/src/: comparison.rs  fixtures.rs  lib.rs  report.rs
crates/bg-remove-testing/tests/: accuracy_tests.rs  compatibility_tests.rs  format_tests.rs  performance_tests.rs
crates/bg-remove-tract/: CHANGELOG.md  Cargo.toml
crates/bg-remove-tract/src/: lib.rs
crates/bg-remove-web/: Cargo.toml  README.md  run-demo.sh
crates/bg-remove-web/demo/: app.js  index.html  serve.json  serve.py  style.css  test.html  working-demo.html
crates/bg-remove-web/demo/js/: index.js  types.d.ts
crates/bg-remove-web/js/: index.js  types.d.ts
crates/bg-remove-web/src/: backend_factory.rs  config.rs  lib.rs  lib_old.rs
docs/: FORMATTING_GUIDELINES.md  ISSUES.md  RELEASE_WORKFLOW.md  configuration-simplification-completion-summary.md  implementation_plan.md
docs/articles/: ARTICLE.md
docs/code_reviews/: 2025-01-agents-codebase-review.md
docs/issues/: backend-module-refactoring.md  birefnet-portrait-support.md  multi-model-support.md  output-timing-breakdown.md  provider-availability-refactoring.md  runtime-model-selection.md  zero-warning-policy-implementation.md  zero-warning-policy.md
docs/plans/: simplify-configuration-implementation-plan.md
docs/pull_requests/: 20250614200648_icc_color_profile_preservation.md
examples/: library_usage.rs  minimal_usage.rs  one_liner.rs  stream_usage.rs  test_video.rs  ultra_simple.rs
machines/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu  README.md
scripts/: claude.sandbox.sh
src/: cache.rs  color_profile.rs  config.rs  download.rs  error.rs  inference.rs  lib.rs  models.rs  processor.rs  session_cache.rs  tracing_config.rs  types.rs
src/api/: config.rs  mod.rs  progress.rs
src/backends/: mod.rs  onnx.rs  test_utils.rs  tract.rs
src/cli/: backend_factory.rs  config.rs  main.rs  mod.rs
src/services/: format.rs  io.rs  mod.rs  progress.rs
src/utils/: color.rs  models.rs  preprocessing.rs  providers.rs
test_results/: comparison_report.html  timing_data.json
test_results/reports/: accuracy_report.html  accuracy_report.json  (+1 more)
tests/: README.md  cli_batch_ordering.rs  color_profile_integration.rs  common.rs  comparison.rs  error_handling_edge_cases.rs  fixtures.rs  integration_workflows.rs  lib.rs  report.rs  test_runner.sh
(+37 files in other folders)
