[package]
name = "bg-remove-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Command-line interface for background removal using ISNet models"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[[bin]]
name = "bg-remove"
path = "src/main.rs"

[features]
# Default: embed ISNet FP32 model
default = ["embed-isnet-fp32"]

# Individual model embedding (pass-through to core)
embed-isnet-fp16 = ["bg-remove-core/embed-isnet-fp16"]
embed-isnet-fp32 = ["bg-remove-core/embed-isnet-fp32"]
embed-birefnet-fp16 = ["bg-remove-core/embed-birefnet-fp16"]
embed-birefnet-fp32 = ["bg-remove-core/embed-birefnet-fp32"]
embed-birefnet-lite-fp16 = ["bg-remove-core/embed-birefnet-lite-fp16"]
embed-birefnet-lite-fp32 = ["bg-remove-core/embed-birefnet-lite-fp32"]

# Convenience groups
embed-all-isnet = ["bg-remove-core/embed-all-isnet"]
embed-all-birefnet = ["bg-remove-core/embed-all-birefnet"]
embed-all-birefnet-lite = ["bg-remove-core/embed-all-birefnet-lite"]
embed-all = ["bg-remove-core/embed-all"]

[dependencies]
# Core library
bg-remove-core = { path = "../bg-remove-core" }
# ONNX backend
bg-remove-onnx = { path = "../bg-remove-onnx" }
# Tract backend
bg-remove-tract = { path = "../bg-remove-tract" }

# CLI dependencies
clap = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# File system operations
glob = "0.3"
walkdir = "2.0"

# Image processing
image = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"