[package]
name = "bg-remove-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core background removal library using ONNX Runtime and ISNet models"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[features]
# Default: ISNet FP16 model (balanced performance, ~90MB binary)
default = ["isnet-fp16"]

# ISNet model variants
isnet-fp16 = ["model-isnet", "precision-fp16"]    # ISNet FP16 (84MB)
isnet-fp32 = ["model-isnet", "precision-fp32"]    # ISNet FP32 (168MB)

# BiRefNet portrait model variants
birefnet-fp16 = ["model-birefnet", "precision-fp16"]  # BiRefNet FP16 (467MB) 
birefnet-fp32 = ["model-birefnet", "precision-fp32"]  # BiRefNet FP32 (928MB)

# Internal model type features (not user-facing)
model-isnet = []
model-birefnet = []

# Internal precision features (not user-facing)
precision-fp16 = []
precision-fp32 = []

# Legacy compatibility (deprecated)
fp16-model = ["isnet-fp16"]       # Deprecated: use isnet-fp16
fp32-model = ["isnet-fp32"]       # Deprecated: use isnet-fp32

# Development features
benchmark-details = []    # Enable detailed benchmark output

[dependencies]
# Core dependencies
ort = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
env_logger = "0.11"

[[bench]]
name = "background_removal"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[build-dependencies]
serde_json = { workspace = true }