[package]
name = "bg-remove-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core background removal library using ONNX Runtime and ISNet models"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[features]
# Default: no embedded models - runtime loading only
default = []

# Individual model embedding (additive, not mutually exclusive)
embed-isnet-fp16 = []
embed-isnet-fp32 = []
embed-birefnet-fp16 = []
embed-birefnet-fp32 = []
embed-birefnet-lite-fp32 = []

# Convenience groups
embed-all-isnet = ["embed-isnet-fp16", "embed-isnet-fp32"]
embed-all-birefnet = ["embed-birefnet-fp16", "embed-birefnet-fp32"]
embed-all-birefnet-lite = ["embed-birefnet-lite-fp32"]
embed-all = ["embed-all-isnet", "embed-all-birefnet", "embed-all-birefnet-lite"]

# Development features
benchmark-details = []    # Enable detailed benchmark output

[dependencies]
# Core dependencies
ort = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
chrono = { workspace = true }

# WebP decoding only (encoding handled by image crate)
webp = "0.3"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
env_logger = "0.11"

[[bench]]
name = "background_removal"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[build-dependencies]
serde_json = { workspace = true }