[package]
name = "bg-remove-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core background removal library using ONNX Runtime and ISNet models"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[features]
# Default: basic features with WebP support
default = ["webp-support"]

# WebP support (pure Rust, WASM-compatible via image crate)
webp-support = ["image/webp"]

# Individual model embedding (additive, not mutually exclusive)
embed-isnet-fp16 = []
embed-isnet-fp32 = []
embed-birefnet-fp16 = []
embed-birefnet-fp32 = []
embed-birefnet-lite-fp16 = []
embed-birefnet-lite-fp32 = []

# Convenience groups
embed-all-isnet = ["embed-isnet-fp16", "embed-isnet-fp32"]
embed-all-birefnet = ["embed-birefnet-fp16", "embed-birefnet-fp32"]
embed-all-birefnet-lite = ["embed-birefnet-lite-fp16", "embed-birefnet-lite-fp32"]
embed-all = ["embed-all-isnet", "embed-all-birefnet", "embed-all-birefnet-lite"]

# Development features
benchmark-details = []    # Enable detailed benchmark output

[dependencies]
# Core dependencies
image = { version = "0.25.6", features = ["png", "jpeg"], default-features = false }
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
chrono = { workspace = true }

# WebP support is now handled entirely by image crate - no external C dependencies needed

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
env_logger = "0.11"
bg-remove-onnx = { path = "../bg-remove-onnx" }

[[bench]]
name = "background_removal"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[build-dependencies]
serde_json = { workspace = true }