[package]
name = "bg-remove-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end testing and benchmarking utilities for the background removal library"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[[bin]]
name = "generate-report"
path = "src/bin/generate-report.rs"

[[bin]]
name = "test-color-profile"
path = "src/bin/test-color-profile.rs"
[dependencies]
bg-remove-core = { path = "../bg-remove-core", features = ["embed-isnet-fp32"] }
bg-remove-onnx = { path = "../bg-remove-onnx" }
bg-remove-tract = { path = "../bg-remove-tract" }
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
indicatif = "0.17"
comfy-table = "7.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
criterion = { version = "0.5", optional = true }

[features]
default = []
benchmarking = ["criterion"]
expensive-tests = []
regression-tests = []
# Model embedding features (passed through to bg-remove-core)
embed-isnet-fp32 = ["bg-remove-core/embed-isnet-fp32"]
embed-isnet-fp16 = ["bg-remove-core/embed-isnet-fp16"]

[dev-dependencies]
criterion = "0.5"
futures = "0.3"

[[bench]]
name = "background_removal"
harness = false
