[package]
name = "bg-remove-onnx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "ONNX Runtime backend for background removal using bg-remove-core"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[dependencies]
# Core library
bg-remove-core = { path = "../bg-remove-core" }

# ONNX Runtime
ort = { workspace = true }

# Core dependencies
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.11"