[package]
name = "bg-remove-testing"
version = "0.1.0"
edition = "2021"
description = "Testing utilities and tools for the background removal library"

[[bin]]
name = "test-suite"
path = "src/bin/test-suite.rs"

[[bin]]
name = "generate-report"
path = "src/bin/generate-report.rs"

[[bin]]
name = "download-images"
path = "src/bin/download-images.rs"

[[bin]]
name = "validate-outputs"
path = "src/bin/validate-outputs.rs"

[[bin]]
name = "benchmark-runner"
path = "src/bin/benchmark-runner.rs"

[dependencies]
bg-remove-core = { path = "../bg-remove-core" }
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
indicatif = "0.17"
comfy-table = "7.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
criterion = { version = "0.5", optional = true }

[features]
default = []
benchmarking = ["criterion"]

[dev-dependencies]
criterion = "0.5"