[package]
name = "bg-remove-tract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Tract backend for background removal using bg-remove-core (pure Rust, no external dependencies)"

# Inherit workspace lints for zero-warning policy
[lints]
workspace = true

[dependencies]
# Core library
bg-remove-core = { path = "../bg-remove-core" }

# Tract pure Rust inference (no ORT dependency)
tract-onnx = "0.21"
tract-core = "0.21"

# Core dependencies
ndarray = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# WASM-compatible time
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.11"
